<resources>
    <string name="app_name">STIS Contact</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Dodi Firmansyah</string>
    <string name="nav_header_subtitle">222212572@stis.ac.id</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_matkul">Mata Kuliah</string>
    <string name="menu_organisasi">Organisasi</string>
    <string name="invalid_input">Please enter valid input</string>
    <string name="menu_dosen">Dosen</string>
    <string name="menu_logout">LogOut</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>Sign in/string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_message">Selamat Datang</string>
    <string name="signup_prompt">Belum Punya Akun? Daftar Sekarang</string>
    <string name="login_prompt">Sudah Punya Akun? Login Sekarang</string>
    <string name="action_sign_up">SIGN UP</string>
    <string name="prompt_confirmPassword">Confirm Password</string>
    <string name="prompt_name">Username</string>
    <string name="signup_message">REGISTER</string>
</resources>