<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/baseline_add_ic_call_24"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_matkul"
            android:icon="@drawable/baseline_assignment_24"
            android:title="@string/menu_matkul" />
        <item
            android:id="@+id/nav_organisasi"
            android:icon="@drawable/baseline_apartment_24"
            android:title="@string/menu_organisasi" />
        <item
            android:id="@+id/nav_dosen"
            android:icon="@drawable/baseline_assignment_ind_24"
            android:title="@string/menu_dosen" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/menu_logout" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/title_activity_login" />
    </group>
</menu>